# whenever-haskell

./: .envrc  README.md  cabal.project  cabal.project.freeze  docker-compose.yml  nixpkgs.nix  overlay.nix  release.nix  shell.nix
core/: Whenever.hs  whenever-core.cabal
core/Crypto/Data/Padding/: Extended.hs
core/Whenever/: Calendar.hs  Event.hs  Repository.hs
core/Whenever/Calendar/: Encrypted.hs  EventIndex.hs  Unencrypted.hs
core/Whenever/Event/: Attributes.hs  Encrypted.hs  Unencrypted.hs
core/test/: Main.hs
cryptonite-srp/: cryptonite-srp.cabal
cryptonite-srp/Crypto/PubKey/: SRP.hs
cryptonite-srp/Crypto/PubKey/SRP/: Client.hs  Server.hs  Shared.hs
cryptonite-srp/test/: Main.hs
database/: Main.hs  whenever-database.cabal
database/Whenever/Repository/: Postgres.hs
database/migrations/: 1-create-calendars.sql  2-create-events.sql
nix/: hasql-pool-overlay.nix
server/: Main.hs  whenever-server.cabal
tui/: LICENSE  Main.hs  whenever-tui.cabal
