cabal-version:       2.4
name:                whenever-core
version:             0.1.0.0
license:             BSD-3-Clause
author:              Brad Parker
maintainer:          hi@bradparker.com

library
  main-is:             Main.hs
  build-depends:       base ^>=4.13.0.0,
                       aeson,
                       bytestring,
                       containers,
                       cryptonite,
                       generic-lens,
                       lens,
                       text,
                       time,
                       uuid
  exposed-modules:     Whenever,
                       Whenever.Calendar,
                       Whenever.Calendar.Encrypted,
                       Whenever.Calendar.EventIndex,
                       Whenever.Calendar.Unencrypted,
                       Whenever.Event,
                       Whenever.Event.Attributes,
                       Whenever.Event.Encrypted,
                       Whenever.Event.Unencrypted,
                       Whenever.Repository
  other-modules:       Crypto.Data.Padding.Extended
  default-language:    Haskell2010

test-suite whenever-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base ^>=4.13.0.0
