cabal-version:       2.4
name:                whenever-database
version:             0.1.0.0
license:             BSD-3-Clause
author:              Brad Parker
maintainer:          hi@bradparker.com

library
  exposed-modules:     Whenever.Repository.Postgres
  build-depends:       base ^>=4.13.0.0,
                       bytestring,
                       containers,
                       generic-lens,
                       hasql,
                       hasql-pool,
                       hasql-th,
                       lens,
                       mtl,
                       profunctors,
                       text,
                       uuid,
                       vector,
                       whenever-core
  default-language:    Haskell2010

executable database
  main-is:           Main.hs
  build-depends:     base ^>=4.13.0.0,
                     directory,
                     filepath,
                     network-uri,
                     process,
  default-language:  Haskell2010

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base ^>=4.13.0.0
