cabal-version:       2.4
name:                whenever-server
version:             0.1.0.0
license:             BSD-3-Clause
author:              Brad Parker
maintainer:          hi@bradparker.com

executable whenever
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0,
                       bytestring,
                       containers,
                       cryptonite,
                       text,
                       time,
                       uuid,
                       whenever-core
  default-language:    Haskell2010

test-suite whenever-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
