cabal-version:       2.4
name:                whenever-tui
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Brad Parker
maintainer:          hi@bradparker.com

executable whenever-tui
  main-is:             Main.hs
  build-depends:       base ^>=4.13.0.0,
                       brick
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
